--- a/lucas-moorcroft-etal-refs.bib
+++ b/lucas-moorcroft-etal-refs.bib
@@ -55,7 +55,7 @@ url = {http://www.sympy.org},
 @article{rogers2013density,
   title={Density can be misleading for low-density species: benefits of passive acoustic monitoring},
   author={Rogers, Tracey L and Ciaglia, Michaela B and Klinck, Holger and Southwell, Colin},
-  journal={PloS one},
+  journal={Public Library of Science One},
   volume={8},
   number={1},
   pages={e52542},
@@ -97,7 +97,7 @@ url = {http://www.sympy.org},
 
 
 @article{carbone2005far,
-  title={How far do animals go? Determinants of day range in mammals},
+  title={How far do animals go? {Determinants} of day range in mammals},
   author={Carbone, Chris and Cowlishaw, Guy and Isaac, Nick JB and Rowcliffe, J Marcus},
   journal={The American Naturalist},
   volume={165},
@@ -121,12 +121,127 @@ url = {http://www.sympy.org},
 
 
 
+@article{karanth1995,
+  title={Estimating tiger \emph{Panthera tigris} populations from camera-trap data using capture--recapture models},
+  author={Karanth, KU},
+  journal={Biological Conservation},
+  volume={71},
+  number={3},
+  pages={333--338},
+  year={1995},
+  publisher={Elsevier}
+}
+
+@article{soisalo2006estimating,
+  title={Estimating the density of a jaguar population in the Brazilian Pantanal using camera-traps and capture--recapture sampling in combination with {GPS} radio-telemetry},
+  author={Soisalo, Marianne K and Cavalcanti, Sandra},
+  journal={Biological Conservation},
+  volume={129},
+  number={4},
+  pages={487--496},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{trolle2003estimation,
+  title={Estimation of ocelot density in the Pantanal using capture-recapture analysis of camera-trapping data},
+  author={Trolle, Mogens and K{\'e}ry, Marc},
+  journal={Journal of mammalogy},
+  volume={84},
+  number={2},
+  pages={607--614},
+  year={2003}
+}
 
 
 
+@article{trolle2007camera,
+  title={Camera-trap studies of maned wolf density in the Cerrado and the Pantanal of Brazil},
+  author={Trolle, Mogens and Noss, Andrew J and Lima, Edson De S and Dalponte, Julio C},
+  journal={Biodiversity and Conservation},
+  volume={16},
+  number={4},
+  pages={1197--1204},
+  year={2007},
+  publisher={Springer}
+}
 
 
+@article{barlow2005estimates,
+  title={Estimates of sperm whale abundance in the northeastern temperate Pacific from a combined acoustic and visual survey},
+  author={Barlow, J. and Taylor, B.L.},
+  journal={Marine Mammal Science},
+  volume={21},
+  number={3},
+  pages={429--445},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
+@article{marques2011estimating,
+  title={Estimating North Pacific right whale Eubalaena japonica density using passive acoustic cue counting},
+  author={Marques, Tiago A and Munger, Lisa and Thomas, Len and Wiggins, Sean and Hildebrand, John A},
+  journal={Endangered Species Research},
+  volume={13},
+  number={3},
+  pages={163--172},
+  year={2011}
+}
+
+@article{Hutchinson_Waser_2007, 
+  title={Use, misuse and extensions of ``ideal gas'' models of animal encounter.}, 
+  volume={82}, 
+  url={http://www.ncbi.nlm.nih.gov/pubmed/17624958}, 
+  number={3}, 
+  journal={Biological Reviews of the Cambridge Philosophical Society}, 
+  author={Hutchinson, John M C and Waser, Peter M}, 
+  year={2007}, 
+  pages={335--359}
+}
 
 
+@article{yapp1956theory,
+  title={The theory of line transects},
+  author={Yapp, WB},
+  journal={Bird study},
+  volume={3},
+  number={2},
+  pages={93--104},
+  year={1956},
+  publisher={Taylor \& Francis}
+}
 
+@article{leslie1953estimation,
+  title={The estimation of population parameters from data obtained by means of the capture-recapture method: 2. The estimation of total numbers},
+  author={Leslie, P.H. and Chitty, D. and Chitty, H.},
+  journal={Biometrika},
+  volume={39},
+  number={3/4},
+  pages={363--388},
+  year={1953},
+  publisher={JSTOR}
+}
+
+
+@article{schwarz1999,
+Author = {Schwarz, CJ and Seber, GAF},
+Title = {{Estimating animal abundance: Review III}},
+Journal = {{Statistical Science}},
+Year = {{1999}},
+Volume = {{14}},
+Number = {{4}},
+Pages = {{427-456}},
+Month = {{NOV}},
+Publisher = {{INST MATHEMATICAL STATISTICS}},
+Address = {{IMS BUSINESS OFFICE-SUITE 7, 3401 INVESTMENT BLVD, HAYWARD, CA 94545 USA}},
+Type = {{Review}},
+Language = {{English}},
+Research-Areas = {{Mathematics}},
+Web-of-Science-Categories  = {{Statistics \& Probability}},
+Number-of-Cited-References = {{431}},
+Times-Cited = {{190}},
+Journal-ISO = {{Stat. Sci.}},
+Doc-Delivery-Number = {{297QQ}},
+Unique-ID = {{ISI:000086094500006}},
+}
 
