--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -1,39 +1,53 @@
 
 
-\definecolor{approachCol}{rgb}{0.96,0.96,0.96}
+\def\r{4}
+\def\o{0.3}
+\def\lwr{-0.5}
+\def\upr{1.3}
+\def\gap{0.2}
+\def\arrowSz{0.5}
+\def\angRad{0.6}
+\definecolor{arrowCol}{rgb}{0.5,0.5,0.5}
+\definecolor{sensCol}{rgb}{0,0,1}
+\definecolor{callCol}{rgb}{1,0,0}
 
 
-\newcommand{\segment}[2]{
-	\draw[ultra thick] (0,0) -- ++(90-#1/2:#2cm)
-     	      (0,0) -- ++(90+#1/2:#2cm);
-	\draw[ultra thick] (0,0) ++(90-#1/2:#2cm) arc (90-#1/2:90+#1/2:#2cm);
+\newcommand{\call}[1]{ % callAngle
+        \fill[opacity=\o, red] (-{\r*sin(#1/2)}, \lwr) rectangle ({\r*sin(#1/2)}, \upr*\r);       
+}
+
+\newcommand{\sensorxtwo}[2]{ % sensorAngle, x2
+        \fill[opacity=\o, blue] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr*\r);       
+}
+
+\newcommand{\directionArrow}[3]{ % callAngle, sensorAngle, x2
+        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},{\r*cos(#2/2 + #3)})}
+        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r*cos(#3 - #2/2)})}
+        \fill[ arrowCol ] (\leftPoi, \lwr-\gap) -- (\rightPoi, \lwr-\gap) -- ({(\leftPoi+\rightPoi)/2},\lwr-\gap - \arrowSz) -- cycle;
+
+}
+
+\newcommand{\segment}[2]{ % sensor width, x2
+	\draw[] (0,0) -- ++(#2 - #1/2:\r)
+     	        (0,0) -- ++(#2 + #1/2:\r);
+	\draw[] (0,0) ++(#2 - #1/2:\r) arc (#2 - #1/2:#2 + #1/2:\r);
+	\draw[] (0,0) ++(#2 - #1/2:\r) -- (#2 + #1/2:\r);
+}
+
+\newcommand{\profiletwo}[2]{ % sensor width, x2
+        \pgfmathsetmacro{\pLen}{{2*\r*sin(#1/2)*sin(#2)}}
+        \draw[ultra thick, red] (0,0)  ++ (#2 - #1/2:\r) -- ++(180:\pLen) ;
+	\draw[ultra thick, red] (0,0) ++(#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2:\angRad);
+        \node[below right] at (#2 + #1/2:\r) {$x_2$}
 }
 
 
-\newcommand{\profilextwo}[3]{ % angle, sensor width, r
-	\draw[ultra thick, red] ({#3*cos(90-#2/2)}, {#3*sin(90-#2/2)}) 
-	--++ (270-#1: {2*#3*sin(#2/2)*sin(#1)});
+
+\newcommand{\fullTwo}[3]{ % call, sensor, x1
+        \call{#1};
+        \sensorxtwo{#2}{#3};
+        \directionArrow{#1}{#2}{#3};
+        \segment{#2}{#3};
+        \profiletwo{#2}{#3};
 }
-
-\newcommand{\profilexthree}[3]{ % angle, sensor width, r
-	\draw[ultra thick, red] ({#3*cos(90-#2/2)}, {#3*sin(90-#2/2)}) 
-	--++ (180-#2/2+#1: {#3*sin(#1)});
-}
-
-
-
-\newcommand{\approachtwo}[4]{ % angle, sensor width, r
-	\fill[ approachCol] ({#3*cos(90-#2/2)}, {#3*sin(90-#2/2)}) 
-	--++ (180-#1: #4/2)
-	--++ (270-#1: {2*#3*sin(#2/2)*sin(#1)}) 
-	--++ (360-#1: #4)
-	--++ (90-#1: {2*#3*sin(#2/2)*sin(#1)})
-	-- cycle;
-	\fill[ approachCol ] ({#3*cos(90-#2/2)+1.1*#4*sin(90-#1)/2}, {#3*sin(90-#2/2)-1.1*#4*cos(90-#1)/2}) 
-	--++ (270-#1: {2*#3*sin(#2/2)*sin(#1)})
-	--++ (-15-#1+90: {#3*sin(#2/2)*sin(#1)/cos(15)})
-	-- cycle;
-}
-
-
 
