--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -1,9 +1,9 @@
-
+\usepackage{ifthen}
 
 \def\r{4}
 \def\o{0.3}
-\def\lwr{-0.5}
-\def\upr{1.3}
+\def\lwr{-1.3*\r}
+\def\upr{1.3*\r}
 \def\gap{0.2}
 \def\arrowSz{0.5}
 \def\angRad{0.6}
@@ -11,43 +11,166 @@
 \definecolor{sensCol}{rgb}{0,0,1}
 \definecolor{callCol}{rgb}{1,0,0}
 
+\tikzstyle{profile}=[ultra thick, red]
+
 
 \newcommand{\call}[1]{ % callAngle
-        \fill[opacity=\o, red] (-{\r*sin(#1/2)}, \lwr) rectangle ({\r*sin(#1/2)}, \upr*\r);       
+        \fill[opacity=\o, red] (-{\r*sin(#1/2)}, \lwr) rectangle ({\r*sin(#1/2)}, \upr);       
 }
 
-\newcommand{\sensorxtwo}[2]{ % sensorAngle, x2
-        \fill[opacity=\o, blue] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr*\r);       
+
+
+\newcommand{\profileOne}[2]{ % sensor width, x1
+	\def\x{#2-90}
+	\def\y{#1}
+	\ifthenelse{\lengthtest{\y pt > 200pt}}{
+		\def\leftProf{};
+	}{
+		\node at (0,2) {\y\ is less than 4.5};
+	}
+	
+
+
+        \pgfmathsetmacro{\leftProf}{max({\r*sin(#1/2)},{\r)})}
+       % \draw[profile] (0,0)  ++(0:-\r) -- (0:\r) ;	
+%	%\draw[profile] (0,0) ++ (\angRad,0) arc (0:-#2:\angRad);
+ %       \node[below right] at (0,0) {$x_4$}
 }
 
-\newcommand{\directionArrow}[3]{ % callAngle, sensorAngle, x2
-        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},{\r*cos(#2/2 + #3)})}
-        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r*cos(#3 - #2/2)})}
+\newcommand{\sensorOne}[2]{ % sensorAngle, x1
+        \fill[opacity=\o, blue] (0, \lwr) rectangle ({\r}, \upr);       
+}
+
+\newcommand{\segmentOne}[2]{ % sensor width, x1
+	\draw[] (0,0) -- ++(90 + #1/2 - #2:\r)
+     	        (0,0) -- ++(90 - #1/2 - #2:\r);
+	\draw[] (0,0) ++(90 + #1/2 - #2:\r) arc (90 + #1/2 - #2:90 - #1/2 - #2:\r);
+	%\draw[] (0,0) ++(90 + #1 - #2:\r) -- (90 - #1 - #2:\r);
+}
+
+\newcommand{\directionArrowOne}[3]{ % callAngle, sensorAngle, x1
+        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},0)}
+        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r)})}
         \fill[ arrowCol ] (\leftPoi, \lwr-\gap) -- (\rightPoi, \lwr-\gap) -- ({(\leftPoi+\rightPoi)/2},\lwr-\gap - \arrowSz) -- cycle;
 
 }
 
-\newcommand{\segment}[2]{ % sensor width, x2
+
+\newcommand{\profileTwo}[2]{ % sensor width, x2
+        \pgfmathsetmacro{\pLen}{{2*\r*sin(#1/2)*sin(#2)}}
+        \draw[profile] (0,0)  ++ (#2 - #1/2:\r) -- ++(180:\pLen) ;
+	\draw[profile] (0,0) ++(#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2):\angRad);
+        \node[above right] at (#2 + #1/2:\r) {$x_2$}
+}
+
+\newcommand{\sensorTwo}[2]{ % sensorAngle, x2
+        \fill[opacity=\o, blue] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr);       
+}
+
+\newcommand{\segmentTwo}[2]{ % sensor width, x2
 	\draw[] (0,0) -- ++(#2 - #1/2:\r)
      	        (0,0) -- ++(#2 + #1/2:\r);
 	\draw[] (0,0) ++(#2 - #1/2:\r) arc (#2 - #1/2:#2 + #1/2:\r);
 	\draw[] (0,0) ++(#2 - #1/2:\r) -- (#2 + #1/2:\r);
 }
 
-\newcommand{\profiletwo}[2]{ % sensor width, x2
-        \pgfmathsetmacro{\pLen}{{2*\r*sin(#1/2)*sin(#2)}}
-        \draw[ultra thick, red] (0,0)  ++ (#2 - #1/2:\r) -- ++(180:\pLen) ;
-	\draw[ultra thick, red] (0,0) ++(#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2:\angRad);
-        \node[below right] at (#2 + #1/2:\r) {$x_2$}
+\newcommand{\directionArrowTwo}[3]{ % callAngle, sensorAngle, x2
+        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},{\r*cos(#2/2 + #3)})}
+        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r*cos(#3 - #2/2)})}
+        \fill[ arrowCol ] (\leftPoi, \lwr-\gap) -- (\rightPoi, \lwr-\gap) -- ({(\leftPoi+\rightPoi)/2},\lwr-\gap - \arrowSz) -- cycle;
+
+}
+
+\newcommand{\profileThree}[2]{ % sensorAngle, x3
+        \pgfmathsetmacro{\pLen}{{\r*sin(#2)}}
+        \draw[profile] (0,0) ++ (90 - #2:\r) -- ++(180:\pLen) ;
+	\draw[profile] (0,0) ++  (0,\angRad) arc (90:90 - #2:\angRad);
+        \node[below right] at (0,0) {$x_3$}
+}
+
+\newcommand{\sensorThree}[2]{ % sensorAngle, x3
+        \fill[opacity=\o, blue] (0, \lwr) rectangle ({\r*sin(#2)}, \upr);       
+}
+
+\newcommand{\segmentThree}[2]{ % sensorAngle, x3
+	\draw[] (0,0) -- ++(90 - #2 + #1:\r)
+     	        (0,0) -- ++(90 - #2:\r);
+	\draw[] (0,0) ++(90 - #2 + #1:\r) arc (90 - #2 + #1:90 - #2:\r);
+	\draw[] (0,0) ++(90 - #2 + #1:\r) -- (90 - #2:\r);
+}
+
+
+\newcommand{\directionArrowThree}[3]{ % callAngle, sensorAngle, x3
+        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},{0})}
+        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r*sin(#2)})}
+        \fill[ arrowCol ] (\leftPoi, \lwr-\gap) -- (\rightPoi, \lwr-\gap) -- ({(\leftPoi+\rightPoi)/2},\lwr-\gap - \arrowSz) -- cycle;
+
 }
 
 
 
-\newcommand{\fullTwo}[3]{ % call, sensor, x1
+\newcommand{\profileFour}[2]{ % sensor width, x4
+        \draw[profile] (0,0)  -- ++(0:\r) ;
+	\draw[profile] (0,0) ++ (\angRad,0) arc (0:-#2:\angRad);
+        \node[above right] at (0,0) {$x_4$}
+}
+
+\newcommand{\sensorFour}[2]{ % sensorAngle, x4
+        \fill[opacity=\o, blue] (0, \lwr) rectangle ({\r}, \upr);       
+}
+
+\newcommand{\segmentFour}[2]{ % sensor width, x4
+	\draw[] (0,0) -- ++(#1 - #2:\r)
+     	        (0,0) -- ++(-#2:\r);
+	\draw[] (0,0) ++(#1 - #2:\r) arc (#1 - #2:-#2:\r);
+	\draw[] (0,0) ++(#1 - #2:\r) -- (-#2:\r);
+}
+
+\newcommand{\directionArrowFour}[3]{ % callAngle, sensorAngle, x4
+        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},0)}
+        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r)})}
+        \fill[ arrowCol ] (\leftPoi, \lwr-\gap) -- (\rightPoi, \lwr-\gap) -- ({(\leftPoi+\rightPoi)/2},\lwr-\gap - \arrowSz) -- cycle;
+
+}
+
+
+
+
+
+\newcommand{\fullOne}[3]{ % call, sensor, x4
         \call{#1};
-        \sensorxtwo{#2}{#3};
-        \directionArrow{#1}{#2}{#3};
-        \segment{#2}{#3};
-        \profiletwo{#2}{#3};
+        \sensorOne{#2}{#3};
+        \directionArrowOne{#1}{#2}{#3};
+        \segmentOne{#2}{#3};
+        \profileOne{#2}{#3};
 }
+
+
+
+\newcommand{\fullTwo}[3]{ % call, sensor, x2
+        \call{#1};
+        \sensorTwo{#2}{#3};
+        \directionArrowTwo{#1}{#2}{#3};
+        \segmentTwo{#2}{#3};
+        \profileTwo{#2}{#3};
+}
+
+\newcommand{\fullThree}[3]{ % call, sensor, x3
+        \call{#1};
+        \sensorThree{#2}{#3};
+        \directionArrowThree{#1}{#2}{#3};
+        \segmentThree{#2}{#3};
+        \profileThree{#2}{#3};
+}
+
+
+
+\newcommand{\fullFour}[3]{ % call, sensor, x4
+        \call{#1};
+        \sensorFour{#2}{#3};
+        \directionArrowFour{#1}{#2}{#3};
+        \segmentFour{#2}{#3};
+        \profileFour{#2}{#3};
+}
+
 
