--- a/supplementary-material/supplementaryText.tex
+++ b/supplementary-material/supplementaryText.tex
@@ -1,17 +1,15 @@
 \documentclass[a4paper,10pt,reqno,oneside]{amsart}
 \usepackage{caption}
-%\usepackage[usenames,dvipsnames]{color}
-%\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
+\usepackage[usenames,dvipsnames]{color}
+\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
 \usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,subcaption,array,verbatim,setspace, tikz}
 \usepackage[pagewise, displaymath, mathlines]{lineno}
-\usepackage{epstopdf}
+%\usepackage{epstopdf}
 
 \renewcommand{\theequation}{eqn S\arabic{equation}}
 \makeatletter
 \def\tagform@#1{\maketag@@@{\ignorespaces#1\unskip\@@italiccorr}}
 \makeatother
-
-
 
 
 
@@ -35,6 +33,12 @@
 
 
 \begin{document}
+
+\title{Supplementary text: A generalisation of ideal gas models for camera traps and acoustic sensors}
+\maketitle
+
+\tableofcontents
+
 
 \input{/home/tim/Dropbox/liz-paper/lucasMoorcroftManuscript/supplementary-material/REM-methods.tex}
 
