--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -21,20 +21,18 @@
 
 
 \newcommand{\profileOne}[2]{ % sensor width, x1
-	\def\x{#2-90}
+	\def\x{#2}
 	\def\y{#1}
-	\ifthenelse{\lengthtest{\y pt > 200pt}}{
-		\def\leftProf{};
+	\ifthenelse{\lengthtest{0.5\y pt < \x pt} \AND \lengthtest{\x pt < 360 pt - 2\y pt}}{
+                \pgfmathsetmacro{\leftProf}{max({\r*cos(#2 - #1/2)},{\r*cos(#2 + #1/2)})}
 	}{
-		\node at (0,2) {\y\ is less than 4.5};
+                \pgfmathsetmacro{\leftProf}{\r}
 	}
 	
-
-
-        \pgfmathsetmacro{\leftProf}{max({\r*sin(#1/2)},{\r)})}
-       % \draw[profile] (0,0)  ++(0:-\r) -- (0:\r) ;	
+        \draw[profile]  (0,0)  -- (0:\leftProf)
+                        (0,0)  -- (180:\r)  ;	
 %	%\draw[profile] (0,0) ++ (\angRad,0) arc (0:-#2:\angRad);
- %       \node[below right] at (0,0) {$x_4$}
+       \node[below right] at (0,0) {\leftProf}
 }
 
 \newcommand{\sensorOne}[2]{ % sensorAngle, x1
