--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -36,7 +36,9 @@
 		\pgfmathsetmacro{\leftProf}{\r};
 	}
 	\draw[profile]  (0,0)  -- (180:\leftProf)
-                        (0,0)  -- (0:\r);  
+                        (0,0)  -- (0:\r);
+	\draw[profile] (0,0) ++  (-\angRad,0) arc (180:180 - #2 :\angRad);
+        \node[below ] at (0,0) {$x_1$}
 }
 
 
@@ -59,6 +61,7 @@
 \newcommand{\segmentOne}[2]{ % sensor width, x1
 	\draw[] (0,0) -- ++(180 + #1/2 - #2:\r)
      	        (0,0) -- ++(180 - #1/2 - #2:\r);
+	\draw[] (0,0) -- (180 - #2 :\r);
 	\draw[] (0,0) ++(180 + #1/2 - #2:\r) arc (180 + #1/2 - #2:180 - #1/2 - #2:\r);
 }
 
@@ -83,7 +86,7 @@
 \newcommand{\profileTwo}[2]{ % sensor width, x2
         \pgfmathsetmacro{\pLen}{{2*\r*sin(#1/2)*sin(#2)}}
         \draw[profile] (0,0)  ++ (#2 - #1/2:\r) -- ++(180:\pLen) ;
-	\draw[profile] (0,0) ++(#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2):\angRad);
+	\draw[profile] (0,0) ++ (#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2):\angRad);
         \node[above right] at (#2 + #1/2:\r) {$x_2$}
 }
 
