--- a/tikzREMmethods.tex
+++ b/tikzREMmethods.tex
@@ -1,7 +1,7 @@
 \usepackage{etoolbox}
 
 \def\r{4}
-\def\o{0.3}
+\def\o{0.2}
 \def\lwr{-1.3*\r}
 \def\upr{1.3*\r}
 \def\gap{0.2}
@@ -10,8 +10,11 @@
 \definecolor{arrowCol}{rgb}{0.5,0.5,0.5}
 \definecolor{sensCol}{rgb}{0,0,1}
 \definecolor{callCol}{rgb}{1,0,0}
+\definecolor{profCol}{rgb}{0.8,0,0}
+\definecolor{profText}{rgb}{0.55,0,0}
+\definecolor{focus}{rgb}{0.5,0.8,0.5}
 
-\tikzstyle{profile}=[ultra thick, red]
+\tikzstyle{profile}=[ultra thick, profCol]
 
 
 
@@ -19,7 +22,15 @@
 \newlength{\y}
 
 \newcommand{\call}[1]{ % callAngle
-        \fill[opacity=\o, red] (-{\r*sin(#1/2)}, \lwr) rectangle ({\r*sin(#1/2)}, \upr);       
+	\setlength{\y}{#1 pt}
+	\ifboolexpr{
+		test {\ifdimless{\y}{180 pt}}
+	}{
+		\pgfmathsetmacro{\width}{\r*sin(#1/2)};	
+	}{
+		\pgfmathsetmacro{\width}{\r};	
+	} 
+        \fill[opacity=\o, callCol] (-{\width}, \lwr) rectangle ({\width}, \upr);       
 }
 
 \newcommand{\profileOne}[2]{ % sensor width, x1
@@ -37,8 +48,11 @@
 	}
 	\draw[profile]  (0,0)  -- (180:\leftProf)
                         (0,0)  -- (0:\r);
+}
+
+\newcommand{\angleOne}[2]{
 	\draw[profile] (0,0) ++  (-\angRad,0) arc (180:180 - #2 :\angRad);
-        \node[below ] at (0,0) {$x_1$}
+        \node[below right, profText ] at (0,0) {$x_1$}
 }
 
 
@@ -55,7 +69,7 @@
 	}{
 		\pgfmathsetmacro{\leftProf}{\r};
 	}
-        \fill[opacity=\o, blue] (-\leftProf, \lwr) rectangle ({\r}, \upr);       
+        \fill[opacity=\o, sensCol] (-\leftProf, \lwr) rectangle ({\r}, \upr);       
 }
 
 \newcommand{\segmentOne}[2]{ % sensor width, x1
@@ -73,7 +87,7 @@
 		and
 		test{\ifdimless{\x}{360 pt - 0.5\y}} 
 	}{
-		\pgfmathsetmacro{\leftPoi}{max({\r*cos(#3 - #2/2)},{\r*cos(#3 + #2/2)})};
+		\pgfmathsetmacro{\leftPoi}{max({\r*cos(#3 - #2/2)},{\r*cos(#3 + #2/2)}, {\r*sin(#1/2)})};
 	}{
 		\pgfmathsetmacro{\leftPoi}{\r};
 	}
@@ -86,12 +100,16 @@
 \newcommand{\profileTwo}[2]{ % sensor width, x2
         \pgfmathsetmacro{\pLen}{{2*\r*sin(#1/2)*sin(#2)}}
         \draw[profile] (0,0)  ++ (#2 - #1/2:\r) -- ++(180:\pLen) ;
-	\draw[profile] (0,0) ++ (#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2):\angRad);
-        \node[above right] at (#2 + #1/2:\r) {$x_2$}
 }
 
+\newcommand{\angleTwo}[2]{
+	\draw[profile] (0,0) ++ (#2 + #1/2:\r) ++ (0,-\angRad) arc (-90:-(90 - #2):\angRad);
+        \node[above right, profText] at (#2 + #1/2:\r) {$x_2$}
+}
+
+
 \newcommand{\sensorTwo}[2]{ % sensorAngle, x2
-        \fill[opacity=\o, blue] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr);       
+        \fill[opacity=\o, sensCol] ({\r*cos(#1/2 + #2)}, \lwr) rectangle ({\r*cos(#2 - #1/2)}, \upr);       
 }
 
 \newcommand{\segmentTwo}[2]{ % sensor width, x2
@@ -111,12 +129,15 @@
 \newcommand{\profileThree}[2]{ % sensorAngle, x3
         \pgfmathsetmacro{\pLen}{{\r*sin(#2)}}
         \draw[profile] (0,0) ++ (90 - #2:\r) -- ++(180:\pLen) ;
+}
+
+\newcommand{\angleThree}[2]{
 	\draw[profile] (0,0) ++  (0,\angRad) arc (90:90 - #2:\angRad);
-        \node[below right] at (0,0) {$x_3$}
+        \node[below right, profText] at (0,0) {$x_3$}
 }
 
 \newcommand{\sensorThree}[2]{ % sensorAngle, x3
-        \fill[opacity=\o, blue] (0, \lwr) rectangle ({\r*sin(#2)}, \upr);       
+        \fill[opacity=\o, sensCol] (0, \lwr) rectangle ({\r*sin(#2)}, \upr);       
 }
 
 \newcommand{\segmentThree}[2]{ % sensorAngle, x3
@@ -128,22 +149,44 @@
 
 
 \newcommand{\directionArrowThree}[3]{ % callAngle, sensorAngle, x3
-        \pgfmathsetmacro{\leftPoi}{min({-\r*sin(#1/2)},{0})}
-        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#1/2)},{\r*sin(#2)})}
+        \pgfmathsetmacro{\leftPoi}{0}
+        \pgfmathsetmacro{\rightPoi}{max({\r*sin(#2/2)},{\r*sin(#3)})}
         \fill[ arrowCol ] (\leftPoi, \lwr-\gap) -- (\rightPoi, \lwr-\gap) -- ({(\leftPoi+\rightPoi)/2},\lwr-\gap - \arrowSz) -- cycle;
 
 }
 
 
 
-\newcommand{\profileFour}[2]{ % sensor width, x4
+\newcommand{\profileFour}{ % sensor width, x4
         \draw[profile] (0,0)  -- ++(0:\r) ;
+}
+
+\newcommand{\angleFour}[2]{
 	\draw[profile] (0,0) ++ (\angRad,0) arc (0:-#2:\angRad);
-        \node[above right] at (0,0) {$x_4$}
+        \node[above right, profText] at (0,0) {$x_4$}
 }
 
 \newcommand{\sensorFour}[2]{ % sensorAngle, x4
-        \fill[opacity=\o, blue] (0, \lwr) rectangle ({\r}, \upr);       
+	\setlength{\y}{#1 pt}
+	\setlength{\x}{#2 pt}
+	\ifboolexpr{%
+		test {\ifdimgreater{\y}{90 pt}} 
+		and
+		test{\ifdimless{\x}{\y-90 pt}}  
+	}{
+		\pgfmathsetmacro{\leftPoi}{{\r*cos(#1-#2)}};
+	}{
+		\ifboolexpr{%
+			test {\ifdimgreater{\y}{90 pt}} 
+			and
+			test{\ifdimgreater{\x}{90 pt}}
+			}{
+				\pgfmathsetmacro{\leftPoi}{{\r*cos(#2)}}; 
+			}{ 		
+				\pgfmathsetmacro{\leftPoi}{0};
+			}
+	}
+        \fill[opacity=\o, sensCol] (\leftPoi, \lwr) rectangle ({\r}, \upr);       
 }
 
 \newcommand{\segmentFour}[2]{ % sensor width, x4
@@ -198,6 +241,32 @@
         \directionArrowFour{#1}{#2}{#3};
         \segmentFour{#2}{#3};
         \profileFour{#2}{#3};
+}
+
+
+
+\newcommand{\fullAngleOne}[3]{ % call, sensor, x4
+        \fullOne{#1}{#2}{#3};
+        \angleOne{#2}{#3};
+}
+
+
+
+\newcommand{\fullAngleTwo}[3]{ % call, sensor, x2
+        \fullTwo{#1}{#2}{#3};
+        \angleTwo{#2}{#3};
+}
+
+\newcommand{\fullAngleThree}[3]{ % call, sensor, x3
+        \fullThree{#1}{#2}{#3};
+        \angleThree{#2}{#3};
+}
+
+
+
+\newcommand{\fullAngleFour}[3]{ % call, sensor, x4
+        \fullFour{#1}{#2}{#3};
+        \angleFour{#2}{#3};
 }
 
 
