--- a/tim liz paper draft.tex
+++ b/tim liz paper draft.tex
@@ -2,7 +2,7 @@
 \usepackage{caption}
 %\usepackage[usenames,dvipsnames]{color}
 %\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
-\usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,program,subcaption,array,verbatim,setspace, siunitx}
+\usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,subcaption,array,verbatim,setspace, siunitx}
 \usepackage[pagewise,displaymath, mathlines]{lineno}
 \usepackage{epstopdf}
 
@@ -14,7 +14,7 @@
 
 
 
-\usepackage[nolists, nomarkers]{endfloat}
+%\usepackage[nolists, nomarkers]{endfloat}
 \linenumbers
 \doublespacing
 
@@ -165,9 +165,9 @@ We then consider movement from the reference frame of the animals so that now, a
 \end{equation}
 However, in practice we have the opposite situation. We know the number of encounters and want to estimate the density. We do this be simply rearranging to get:
 \begin{equation}
-	D = z/(2rvt)
+	D = z/2rvt
 \end{equation}
-For different values of s and a, the only thing that changes is that the area covered per unit time is no longer given by $2rv$. Instead of the sensor having a diameter of $2r$, the sensor has a complex diameter that changes with approach angle. If we call this average diameter or profile $p$, the rest of the derivation is just calculating this value for all values of $a$ and $s$. However, different regions of this two dimensional parameter space have noncontinuously different models, with different derivations. Therefore we have to identify the regions for which the derivation is the same, and then separately derive $p$ for each region.
+For different values of s and a, the only thing that changes is that the area covered per unit time is no longer given by $2rv$. Instead of the sensor having a diameter of $2r$, the sensor has a complex diameter that changes with approach angle. If we call this average diameter or profile $p$, the rest of the derivation is just calculating this value for all values of $a$ and $s$. However, different regions of this two dimensional parameter space have noncontinuously different models, with different derivations. Therefore we have to identify the regions for which the derivation is the same, and then separately derive $p$ for each region. 
 
 \begin{figure}
 \centering
@@ -202,20 +202,13 @@ While specifying the models had to be done by hand, the calculation of the solut
 The models are checked for errors with a number of tests. They are checked against each other by checking that models that are adjacent in parameter space are equal at the boundary between them. Models that border $ \alpha = 0$ should have $p = 0$ when $ \alpha = 0$ and this is checked for. We checked that all solutions are between 0 and $2r$ and that each integral, divided by the range of angles that it is integrated over is between 0 and $2r$. These tests, as well as analytical derivations, are in supplementary script S3.
 
 
-\begin{figure}
-\centering
-\includegraphics[width=1\textwidth]{imgs/equalModelResults.pdf}
-\caption{The results of the models grouped so that all the regions with equal results are presented only once.}
-\label{f:equalModelResults}
-\end{figure}
-
 To make the application of these models simple, we have included an R script in S1. 
 
 \subsection{Simulation Methods}
 
 % @liz: Why is it 56.25km^2? 
 
-The simulated world consists of \SI{56.25}{\kilo\meter\squared} and is populated with a density of  \SI{70}{\animals\per\kilo\meter\squared} \citep{damuth1981population}, creating a total of 3937 animals per simulation randomly placed at the start of the simulation. 
+The simulated world consists is a  \SI{7.55}{\kilo\meter} by \SI{7.55}{\kilo\meter} square and is populated with a density of  \SI{70}{\animals\per\kilo\meter\squared} \citep{damuth1981population}, creating a total of 3937 animals per simulation randomly placed at the start of the simulation. 
 
 The animals move with a simple movement model. The animals moves in discrete time steps but movement is assumed to be continuous. There is no directional change at the end each step. The simulation lasts for $N$ steps of length $T$ during which the animals move with an average constant speed, $v$. 
 
@@ -224,7 +217,7 @@ The animals move with a simple movement model. The animals moves in discrete tim
 % Also, not sure it's the best plan but I've switched to units using the siunitx package. This seems the most consistent and will be easiest to change everything consistently if need be.
 % changed t to T as t is used above.
 
-The distance travelled in each time step, $\mathnormal{d}$, is a random distance picked from Normal distribution with mean distance, $\mu_d = \mathnormal{v} \times \mathnormal{T}$,  and standard deviation of $\sigma_d = \mathnormal{v}\mathnormal{T}/10$. An average speed, $\mathnormal{v} = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds.
+The distance travelled in each time step, $\mathnormal{d}$, is a random distance picked from Normal distribution with mean distance, $\mu_d = vT$,  and standard deviation of $\sigma_d = vT/10$. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this represents the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds.
   
 The simulation of movement outputs the details of each individual capture events, including the angle of front of the animal to the sensor, from which the number of capture event can be calculated for different call widths. The total number of capture events are summed and the analytical model applied to the results in order to estimate the density in the simulation. From this the difference between the true, and estimated, densities can be used to evaluate the bias in the analytical models. If the analytical models are correct the mean difference between the two values should converge to zero as sample size increases. 
 
@@ -237,18 +230,25 @@ In order to assess the precision of the analytical models for different sampling
 \section{Results}
 
 \subsection{Analytical results}
-\begin{itemize}
-\item The model equations
-	\begin{itemize}
-	\item Number of different model extensions that have been calculated
-	\item Figure with model numbers in which can be used to reference the appendix?
-	\end{itemize}
-\end{itemize}
+
+Model results have been derived for each region in Figure~\ref{f:regions} with all models except the gas model and p141 being newly derived here. However, many models, although derived seperately, have the same expression for $p$. Figure~\ref{f:equalModelResults} shows the expression for $p$ in each case. The general equation for density, using the correct model for $p$ is then
+\begin{equation}
+	D = z/pvt.
+\end{equation}
+
+
+\begin{figure}
+\centering
+\includegraphics[width=1\textwidth]{imgs/equalModelResults.pdf}
+\caption{The results of the models grouped so that all the regions with equal results are presented only once.}
+\label{f:equalModelResults}
+\end{figure}
+
 
 
 \subsection{Simulation results}
 
-A hundred simulations were completed for each of the model derivations, with a density of   \SI{70}{\animals\per\kilo\meter\squared}, for a \SI{150}{\day} of simulated time, straight-line movement at a speed of \SI{40}{\kilo\meter\per\day} and a sensor with \SI{100}{\meter} radius. None of the estimated densities produced showed significant deviation from the true density in the simulation, Figure~\ref{f:ModelBias}.
+A hundred simulations were completed for each of the model derivations, with a density of   \SI{70}{\animals\per\kilo\meter\squared}, for \SI{150}{\day} of simulated time, straight-line movement at a speed of \SI{40}{\kilo\meter\per\day} and a sensor with \SI{100}{\meter} radius. None of the estimated densities produced showed significant deviation from the true density in the simulation, Figure~\ref{f:ModelBias}.
 \begin{figure}
 \centering
 \includegraphics[width=1\textwidth]{imgs/AverageModelBias.pdf}
@@ -298,6 +298,32 @@ A hundred simulations were completed for each of the model derivations, with a d
 
 
 \section{Discussion}
+
+%• Discussion: Point out the importance of the results and place them in the context of previous studies and in relation to the application of the work (expanding on the Synthesis and applications section of the Summary). Where appropriate, set out recommendations for management or policy.
+
+We have developed a number of models that can be used to estimate density from acoustic and optical sensors. This has entailed a generalisation of the gas model and model in \cite{rowcliffe2008estimating} to be applicable to any combination of sensor width and call directionality. 
+
+We have used simulations to show, as a proof of principle, that these models are accurate and precise. We have broken some of the assumptions of the model on animal movement and still retained accurate results, although precision is lowered. Finally we have given some general advise on best practice, although this is given based on similar assumptions those used in the derivation in the models.
+
+These model are therefore available to for the estimation of density of a number of taxa of importance to conservation, zoonotic diseases and ecosystem services. The models are suitable for certain groups for which there are currently no or few effective methods for density estimation. 
+
+Importantly the methods are noninvasive and do not require human marking (as required for mark recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources. It also makes them suitable for sensitive species or species that are difficult or dangerous to catch.
+
+Although we have used simulations to validate these models, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted. Note, however, that the gas model and model of \cite{rowcliffe2008estimating} have been been field tested and many of the assumptions between these models and those previously tested are the same. As the utility of the models is that they can be used with taxa that are difficult to study with other methods, there are not many obvious groups that have reliable, gold standard estimates of density from other methods that could then be used to validate these models.
+
+One more straight forward way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be useful.
+
+There are many possible extensions to these models. As has been noted before \citep{rowcliffe2008estimating,Hutchinson_Waser_2007} altering the equations to estimate animal density of group living species is relatively simple. However, the models herein would have to be carefully rederived to account for group living as directional calls are not considered in previous work, and may have important effects.
+
+The original gas model was formulated for the case where both the animal population and the sensors is moving. Indeed any of the models with animals that are equally detectable in all directiosn ($\alpha = 2\pi$) can be trivially expanded for moving by using the sum of the average animal velocity and the sensor velocity instead of $v$ as used here. However, when the animal has a directional call, the extension becomes much less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e. not necessarily moving towards the sensor) weighted by the relative velocity of that direction.
+
+An interesting, and so far untackled problem, is edge effects caused by trigger delays (the delay between sensing an animal and attempting to record the encounter) and time expansion acoustic detectors which repeatedly turn on an off during sampling. Both of these have potential biases as animals can move through the detection region without being detected. The models herein are formulated assuming constant surveillance and so the error quickly becomes negligable.
+
+
+
+
+\begin{comment}
+
 \begin{itemize}
 \item Developed a number of models that can be used to estimate density from acoustic and optical sensors 
 \item These models are accurate 
@@ -316,16 +342,14 @@ A hundred simulations were completed for each of the model derivations, with a d
 	\end{itemize}
 \end{itemize}
 
+\end{comment}
+
+
+%\section{Acknowledgements}
 
 
 
-\section{Acknowledgements}
-Cheers all.
-
-
-\section{Data Accessibility}
-
-
+%\section{Data Accessibility}
 
 
 
@@ -338,10 +362,11 @@ $v$		& Velocity & \SI{}{\meter\per\second}\\
 $\theta$	& Angle of detection & Radians \\
 $\alpha$	& Animal call/beam width & Radians \\
 $r$ 		& Detection distance & Metres\\
+$p$ 		& Average profile width & Metres\\
 $t$		& Time & Seconds\\
 $z$		& Number of dections & \\
 $D$		& Animal density & \SI{}{\animals\per\meter\squared} \\
-$x_i$	        & Focal Angle 	& Radians\\
+$x_i$	        & Focal Angle $i \in \{1,2,3,4\} $ 	& Radians\\
 $T$ 		& Step length & Seconds\\
 $N$ 		& Number of steps per simulation & \\
 $d$ 		& Time step index &
